--- a/source/form.html
+++ b/source/form.html
@@ -18,27 +18,25 @@
       </button>
       <ul class="main-nav__list">
         <li class="main-nav__item">
-          <a href="#">Главная</a>
+          <a class="main-nav__link" href="#">Главная</a>
         </li>
         <li class="main-nav__item">
-          <a href="#">Фотографии</a>
+          <a class="main-nav__link" href="#">Фотографии</a>
         </li>
         <li class="main-nav__item">
-          <a href="#">Конкурс</a>
+          <a class="main-nav__link" class="main-nav__link">Конкурс</a>
         </li>
         <li class="main-nav__item">
-          <a href="#">HTML Academy</a>
+          <a class="main-nav__link" href="#">HTML Academy</a>
         </li>
       </ul>
     </nav>
   </header>
   <main class="page">
     <div class="hero">
-      <div class="hero__title">
-        <h1 class="hero__text">Конкурс на самое безбашенное путешествие с Пинк</h1>
-      </div>
+      <h1 class="hero__text">Конкурс на самое безбашенное путешествие с Пинк</h1>
     </div>
-    <p class="page__description">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! Пожалуйста, заполните форму ниже:</p>
+    <p class="description">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! Пожалуйста, заполните форму ниже:</p>
     <form class="form-competition" action="https://echo.htmlacademy.ru" method="post">
       <fieldset class="form-competition__set form-competition__set--light">
         <label class="form-competition__text-label" for="lastname">Фамилия:</label>
@@ -111,17 +109,17 @@
       <img class="page-footer__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="пинк лого">
     </a>
     <ul class="social">
-      <li class="social__item">
+      <li class="social__item social__item--twitter">
         <a href="#" class="social__link social__link--twitter">
           <span class="visually-hidden">ссылка на twitter</span>
         </a>
       </li>
-      <li class="social__item">
+      <li class="social__item social__item--facebook">
         <a href="#" class="social__link social__link--facebook">
           <span class="visually-hidden">ссылка на facebook</span>
         </a>
       </li>
-      <li class="social__item">
+      <li class="social__item social__item--youtube">
         <a href="#" class="social__link social__link--youtube">
           <span class="visually-hidden">ссылка на youtube</span>
         </a>
