--- a/source/index.html
+++ b/source/index.html
@@ -15,18 +15,18 @@
           <img class="page-header__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Пинк">
         </a>
         <button class="page-header__menu">
-        <span class="visually-hidden">Меню</span>
-      </button>
+          <span class="visually-hidden">Меню</span>
+        </button>
       </div>
       <ul class="main-nav__list">
         <li class="main-nav__item">
           <a class="main-nav__link">Главная</a>
         </li>
         <li class="main-nav__item">
-          <a class="main-nav__link" href="#">Фотографии</a>
+          <a class="main-nav__link" href="photo.html">Фотографии</a>
         </li>
         <li class="main-nav__item">
-          <a class="main-nav__link" href="#">Конкурс</a>
+          <a class="main-nav__link" href="form.html">Конкурс</a>
         </li>
         <li class="main-nav__item">
           <a class="main-nav__link" href="#">HTML Academy</a>
@@ -41,19 +41,19 @@
         <img class="hero__picture" src="http://placehold.it/150x100" width="150" height="100" alt="Смартфон с приложением">
       </div>
       <div class="hero__download">
-        <a class="hero__download-buttom" href="#">Скачайте приложение</a>
+        <a class="round-button hero__download-button" href="#">Скачайте приложение</a>
         <ul class="hero__device device">
-          <li class="device__item device__item--ios">
+          <li class="device__item">
             <a href="#" class="device__link device__link--ios">
               <span class="visually-hidden">приложение для iOS</span>
             </a>
           </li>
-          <li class="device__item device__item--android">
+          <li class="device__item">
             <a href="#" class="device__link device__link--android">
               <span class="visually-hidden">приложение для Android</span>
             </a>
           </li>
-          <li class="device__item device__item--windows">
+          <li class="device__item">
             <a href="#" class="device__link device__link--windows">
               <span class="visually-hidden">приложение для Windows</span>
             </a>
@@ -116,15 +116,15 @@
         <table class="price__packages packages slider__list">
           <tr class="packages__description">
             <th class="packages__header">
-              <h3 class="packages__title">База</h3>
+              <p class="packages__title">База</p>
               <p class="packages__price">1,99 USD</p>
             </th>
             <th class="packages__header packages__header--hit">
-              <h3 class="packages__title">Стандарт</h3>
+              <p class="packages__title">Стандарт</p>
               <p class="packages__price">3,99 USD</p>
             </th>
             <th class="packages__header">
-              <h3 class="packages__title">Анлим</h3>
+              <p class="packages__title">Анлим</p>
               <p class="packages__price">9,99 USD</p>
             </th>
           </tr>
@@ -181,17 +181,17 @@
       <img class="page-footer__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="пинк лого">
     </a>
     <ul class="social">
-      <li class="social__item social__item--twitter">
+      <li class="social__item">
         <a href="#" class="social__link social__link--twitter">
           <span class="visually-hidden">ссылка на twitter</span>
         </a>
       </li>
-      <li class="social__item social__item--facebook">
+      <li class="social__item">
         <a href="#" class="social__link social__link--facebook">
           <span class="visually-hidden">ссылка на facebook</span>
         </a>
       </li>
-      <li class="social__item social__item--youtube">
+      <li class="social__item">
         <a href="#" class="social__link social__link--youtube">
           <span class="visually-hidden">ссылка на youtube</span>
         </a>
