--- a/source/form.html
+++ b/source/form.html
@@ -18,13 +18,13 @@
       </button>
       <ul class="main-nav__list">
         <li class="main-nav__item">
-          <a class="main-nav__link" href="#">Главная</a>
+          <a class="main-nav__link" href="index.html">Главная</a>
         </li>
         <li class="main-nav__item">
-          <a class="main-nav__link" href="#">Фотографии</a>
+          <a class="main-nav__link" href="photo.html">Фотографии</a>
         </li>
         <li class="main-nav__item">
-          <a class="main-nav__link" class="main-nav__link">Конкурс</a>
+          <a class="main-nav__link">Конкурс</a>
         </li>
         <li class="main-nav__item">
           <a class="main-nav__link" href="#">HTML Academy</a>
@@ -81,7 +81,7 @@
         <textarea class="form-competition__comment" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
       </fieldset>
       <div class="form-competition__button">
-        <button class="form-competition__send-form" type="submit">Отправить форму</button>
+        <button class="btn-form" type="submit">Отправить форму</button>
       </div>
       <p class="form-competition__note"><span class="form-competition__colored-text">*</span> — обязательные поля</p>
     </form>
@@ -91,7 +91,7 @@
         <p class="pop-up__desctiption">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
       </div>
       <div class="pop-up__button-place">
-        <button class="pop-up__button" type="button">OK</button>
+        <button class="btn-form" type="button">OK</button>
       </div>
     </div>
     <div class="pop-up">
@@ -100,7 +100,7 @@
         <p class="pop-up__descriplion">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
       </div>
       <div class="pop-up__button-place pop-up__button-place--success">
-        <button class="pop-up__button" type="button">Закрыть окно</button>
+        <button class="btn-form" type="button">Закрыть окно</button>
       </div>
     </div>
   </main>
@@ -109,17 +109,17 @@
       <img class="page-footer__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="пинк лого">
     </a>
     <ul class="social">
-      <li class="social__item social__item--twitter">
+      <li class="social__item">
         <a href="#" class="social__link social__link--twitter">
           <span class="visually-hidden">ссылка на twitter</span>
         </a>
       </li>
-      <li class="social__item social__item--facebook">
+      <li class="social__item">
         <a href="#" class="social__link social__link--facebook">
           <span class="visually-hidden">ссылка на facebook</span>
         </a>
       </li>
-      <li class="social__item social__item--youtube">
+      <li class="social__item">
         <a href="#" class="social__link social__link--youtube">
           <span class="visually-hidden">ссылка на youtube</span>
         </a>
