--- a/source/photo.html
+++ b/source/photo.html
@@ -18,13 +18,13 @@
       </button>
       <ul class="main-nav__list">
         <li class="main-nav__item">
-          <a class="main-nav__link" href="#">Главная</a>
+          <a class="main-nav__link" href="index.html">Главная</a>
         </li>
         <li class="main-nav__item">
           <a class="main-nav__link">Фотографии</a>
         </li>
         <li class="main-nav__item">
-          <a class="main-nav__link" href="#">Конкурс</a>
+          <a class="main-nav__link" href="form.html">Конкурс</a>
         </li>
         <li class="main-nav__item">
           <a class="main-nav__link" href="#">HTML Academy</a>
@@ -46,10 +46,10 @@
           </a>
         </div>
         <div class="users-posts__article">
-          <p class="users-posts__head">
+          <div class="users-posts__head">
             <p class="users-posts__author">Анна</p>
             <p class="users-posts__time">(5 минут назад)</p>
-          </p>
+          </div>
           <p class="users-posts__description">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
           <p class="users-posts__like">Нравится: 215</p>
         </div>
@@ -61,10 +61,10 @@
           </a>
         </div>
         <div class="users-posts__article">
-          <p class="users-posts__head">
+          <div class="users-posts__head">
             <p class="users-posts__author">Левон</p>
             <p class="users-posts__time">(5 часов назад)</p>
-          </p>
+          </div>
           <p class="users-posts__description">Вчера он на луну летал, сегодня в руки к нам попал.</p>
           <p class="users-posts__like">Нравится: 356</p>
         </div>
@@ -76,10 +76,10 @@
           </a>
         </div>
         <div class="users-posts__article">
-          <p class="users-posts__head">
+          <div class="users-posts__head">
             <p class="users-posts__author">Антон</p>
             <p class="users-posts__time">(12 часов назад)</p>
-          </p>
+          </div>
           <p class="users-posts__description">Соседи будут рады!</p>
           <p class="users-posts__like">Нравится: 666</p>
         </div>
@@ -91,10 +91,10 @@
           </a>
         </div>
         <div class="users-posts__article">
-          <p class="users-posts__head">
+          <div class="users-posts__head">
             <p class="users-posts__author">Борис</p>
             <p class="users-posts__time">(20 часов назад)</p>
-          </p>
+          </div>
           <p class="users-posts__description">Здесь могла быть ваша цитата о высоком и вечном.</p>
           <p class="users-posts__like">Нравится: 215</p>
         </div>
@@ -106,10 +106,10 @@
           </a>
         </div>
         <div class="users-posts__article">
-          <p class="users-posts__head">
+          <div class="users-posts__head">
             <p class="users-posts__author">Сергей</p>
             <p class="users-posts__time">(25 часов назад)</p>
-          </p>
+          </div>
           <p class="users-posts__description">Самая кубанская в мире!</p>
           <p class="users-posts__like">Нравится: 4</p>
         </div>
@@ -121,10 +121,10 @@
         </a>
         </div>
         <div class="users-posts__article">
-          <p class="users-posts__head">
+          <div class="users-posts__head">
             <p class="users-posts__author">Максим</p>
             <p class="users-posts__time">(40 часов назад)</p>
-          </p>
+          </div>
           <p class="users-posts__description">Где снег-то?</p>
           <p class="users-posts__like">Нравится: 150</p>
         </div>
@@ -136,10 +136,10 @@
           </a>
         </div>
         <div class="users-posts__article">
-          <p class="users-posts__head">
+          <div class="users-posts__head">
             <p class="users-posts__author">Надежда</p>
             <p class="users-posts__time">(45 часов назад)</p>
-          </p>
+          </div>
           <p class="users-posts__description">Всем GM и взаимные лайки!</p>
           <p class="users-posts__like">Нравится: 2560</p>
         </div>
@@ -147,33 +147,33 @@
     </ul>
     <p class="description">Затмите их всех!<br> Выкладывайте все, что накопилось в телефоне!</p>
     <form class="user-upload" action="https://echo.htmlacademy.ru" method="post">
-      <h4 class="visually-hidden">Загрузить фотографию</h4>
+      <h2 class="visually-hidden">Загрузить фотографию</h2>
       <div class="user-upload__photo">
         <img class="user-upload__image" src="http://placehold.it/150x100" width="150" height="100" alt="загружаемое фото">
       </div>
-      <ul class="edit-photo-photo">
+      <ul class="edit-photo">
         <li class="edit-photo__item">
-          <p class="edit-photo__tool edit-photo__tool--active">
+          <label for="crop" class="edit-photo__tool edit-photo__tool--active">
             <span class="visually-hidden">обрезать фото</span>
-          </p>
-          <input class="edit-photo__range" type="range" min="0" max="50" step="1" value="40">
+          </label>
+          <input id="crop" class="edit-photo__range" type="range" min="0" max="50" step="1" value="40">
         </li>
         <li class="edit-photo__item">
-          <p class="edit-photo__tool">
+          <label for="color" class="edit-photo__tool">
             <span class="visually-hidden">поменять цвет</span>
-          </p>
-          <input class="edit-photo__range" type="range" min="0" max="50" step="1" value="0">
+          </label>
+          <input id="color" class="edit-photo__range" type="range" min="0" max="50" step="1" value="0">
         </li>
         <li class="edit-photo__item">
-          <p class="edit-photo__tool">
+          <label for="contrast" class="edit-photo__tool">
             <span class="visually-hidden">изменить контраст</span>
-          </p>
-          <input class="edit-photo__range" type="range" min="0" max="50" step="1" value="0">
+          </label>
+          <input id="contrast" class="edit-photo__range" type="range" min="0" max="50" step="1" value="0">
         </li>
       </ul>
       <div class="user-upload__buttons">
-        <button class="user-upload__button user-upload__button--upload" type="submit">Запостить</button>
-        <button class="user-upload__button user-upload__button--cancel" type="reset">Отмена</button>
+        <button class="round-button user-upload__button user-upload__button--upload" type="submit">Запостить</button>
+        <button class="round-button user-upload__button user-upload__button--cancel" type="reset">Отмена</button>
       </div>
     </form>
   </main>
