--- a/source/form.html
+++ b/source/form.html
@@ -92,11 +92,15 @@
         <ul class="form-competition__list form-competition__list--adress">
           <li class="form-competition__item form-competition__item--adress">
             <label class="form-competition__text-label form-competition__text-label--adress" for="phone">Номер телефона</label>
-            <input class="form-competition__text form-competition__text--contacts form-competition__text--phone" type="tel" id="phone" placeholder="Номер, пожалуйста">
+            <p class="form-competition__text-input form-competition__text-input--contacts form-competition__text-input--phone">
+              <input class="form-competition__text form-competition__text--contacts" type="tel" id="phone" placeholder="Номер, пожалуйста">
+            </p>
           </li>
           <li class="form-competition__item form-competition__item--adress">
             <label class="form-competition__text-label form-competition__text-label--adress" for="address">Адрес почты</label>
-            <input class="form-competition__text form-competition__text--contacts form-competition__text--mail" type="email" id="address" placeholder="Введите почту *" required>
+            <p class="form-competition__text-input form-competition__text-input--contacts form-competition__text-input--mail">
+              <input class="form-competition__text form-competition__text--contacts form-competition__text--mail" type="email" id="address" placeholder="Введите почту *" required>
+            </p>
           </li>
         </ul>
       </fieldset>
