--- a/source/form.html
+++ b/source/form.html
@@ -145,7 +145,7 @@
           </div>
         </fieldset>
         <fieldset class="form-competition__set form-competition__set--dark form-competition__set--device">
-          <legend class="form-competition__title form-competition__title--dark">
+          <legend class="form-competition__title form-competition__title--dark form-competition__title--device">
             <p class="form-competition__title-wrap form-competition__title-wrap--device">С каким приложением путешествовали?</p>
           </legend>
           <ul class="form-competition__list form-competition__list--radio">
