--- a/source/photo.html
+++ b/source/photo.html
@@ -214,7 +214,7 @@
         </li>
       </ul>
       <div class="annotation annotation--middle">
-        <p class="description">Затмите их всех!<br> Выкладывайте все, что накопилось в телефоне!</p>
+        <p class="description description--photo-middle">Затмите их всех!<br> Выкладывайте все, что накопилось в телефоне!</p>
       </div>
       <form class="user-upload" action="https://echo.htmlacademy.ru" method="post">
         <div class="container container--edit">
