--- a/source/form.html
+++ b/source/form.html
@@ -96,7 +96,7 @@
         </fieldset>
         <fieldset class="form-competition__set form-competition__set--dark form-competition__set--achievements">
           <legend class="form-competition__title form-competition__title--dark">
-            <p class="form-competition__title-wrap form-competition__title-wrap--achievement">Ваши безбашенные достижения в путешествии</p>
+            <span class="form-competition__title-wrap form-competition__title-wrap--achievement">Ваши безбашенные достижения в путешествии</span>
           </legend>
           <ul class="form-competition__list form-competition__list--achievements">
             <li class="form-competition__select-item form-competition__select-item--achievement">
@@ -146,7 +146,7 @@
         </fieldset>
         <fieldset class="form-competition__set form-competition__set--dark form-competition__set--device">
           <legend class="form-competition__title form-competition__title--dark form-competition__title--device">
-            <p class="form-competition__title-wrap form-competition__title-wrap--device">С каким приложением путешествовали?</p>
+            <span class="form-competition__title-wrap form-competition__title-wrap--device">С каким приложением путешествовали?</span>
           </legend>
           <ul class="form-competition__list form-competition__list--radio">
             <li class="form-competition__select-item form-competition__select-item--radio">
