--- a/source/form.html
+++ b/source/form.html
@@ -188,7 +188,7 @@
       <div class="pop-up pop-up--success">
         <div class="pop-up__text">
           <h2 class="pop-up__title">Ваша заявка отправлена</h2>
-          <p class="pop-up__desctiption">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+          <p class="pop-up__desctiption">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и<br> оповестим вас.</p>
         </div>
         <div class="pop-up__button-place pop-up__button-place--success">
           <button class="btn-form" type="button">Закрыть окно</button>
