--- a/source/photo.html
+++ b/source/photo.html
@@ -90,12 +90,14 @@
             </a>
           </div>
           <div class="users-posts__article users-posts__article--pano">
-            <div class="users-posts__head">
-              <p class="users-posts__author">Анна</p>
-              <p class="users-posts__time">(5 минут назад)</p>
+            <div class="container--pano">
+              <div class="users-posts__head">
+                <p class="users-posts__author">Анна</p>
+                <p class="users-posts__time">(5 минут назад)</p>
+              </div>
+              <p class="users-posts__description users-posts__description--pano">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+              <p class="users-posts__like users-posts__like--pano">Нравится: 215</p>
             </div>
-            <p class="users-posts__description users-posts__description--pano">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
-            <p class="users-posts__like users-posts__like--pano">Нравится: 215</p>
           </div>
         </li>
         <li class="users-posts__item">
@@ -109,12 +111,14 @@
             </a>
           </div>
           <div class="users-posts__article">
-            <div class="users-posts__head">
-              <p class="users-posts__author">Левон</p>
-              <p class="users-posts__time">(5 часов назад)</p>
+            <div class="container--photo">
+              <div class="users-posts__head">
+                <p class="users-posts__author">Левон</p>
+                <p class="users-posts__time">(5 часов назад)</p>
+              </div>
+              <p class="users-posts__description">Вчера он на луну летал, сегодня в руки к нам попал.</p>
+              <p class="users-posts__like">Нравится: 356</p>
             </div>
-            <p class="users-posts__description">Вчера он на луну летал, сегодня в руки к нам попал.</p>
-            <p class="users-posts__like">Нравится: 356</p>
           </div>
         </li>
         <li class="users-posts__item">
@@ -128,13 +132,15 @@
             </a>
           </div>
           <div class="users-posts__article">
-            <div class="users-posts__head">
-              <p class="users-posts__author">Антон</p>
-              <p class="users-posts__time">(12 часов назад)</p>
+            <div class="container--photo">
+              <div class="users-posts__head">
+                <p class="users-posts__author">Антон</p>
+                <p class="users-posts__time">(12 часов назад)</p>
+              </div>
+              <p class="users-posts__description">Соседи будут рады!</p>
+              <p class="users-posts__like">Нравится: 666</p>
             </div>
-            <p class="users-posts__description">Соседи будут рады!</p>
-            <p class="users-posts__like">Нравится: 666</p>
-          </div>
+            <div class="container--photo">
         </li>
         <li class="users-posts__item">
           <div class="users-posts__photo">
@@ -147,12 +153,14 @@
             </a>
           </div>
           <div class="users-posts__article">
-            <div class="users-posts__head">
-              <p class="users-posts__author">Борис</p>
-              <p class="users-posts__time">(20 часов назад)</p>
+            <div class="container--photo">
+              <div class="users-posts__head">
+                <p class="users-posts__author">Борис</p>
+                <p class="users-posts__time">(20 часов назад)</p>
+              </div>
+              <p class="users-posts__description">Здесь могла быть ваша цитата о высоком и вечном.</p>
+              <p class="users-posts__like">Нравится: 215</p>
             </div>
-            <p class="users-posts__description">Здесь могла быть ваша цитата о высоком и вечном.</p>
-            <p class="users-posts__like">Нравится: 215</p>
           </div>
         </li>
         <li class="users-posts__item">
@@ -166,12 +174,14 @@
             </a>
           </div>
           <div class="users-posts__article">
-            <div class="users-posts__head">
-              <p class="users-posts__author">Сергей</p>
-              <p class="users-posts__time">(25 часов назад)</p>
+            <div class="container--photo">
+              <div class="users-posts__head">
+                <p class="users-posts__author">Сергей</p>
+                <p class="users-posts__time">(25 часов назад)</p>
+              </div>
+              <p class="users-posts__description">Самая кубанская в мире!</p>
+              <p class="users-posts__like">Нравится: 4</p>
             </div>
-            <p class="users-posts__description">Самая кубанская в мире!</p>
-            <p class="users-posts__like">Нравится: 4</p>
           </div>
         </li>
         <li class="users-posts__item">
@@ -185,12 +195,14 @@
             </a>
           </div>
           <div class="users-posts__article">
-            <div class="users-posts__head">
-              <p class="users-posts__author">Максим</p>
-              <p class="users-posts__time">(40 часов назад)</p>
+            <div class="container--photo">
+              <div class="users-posts__head">
+                <p class="users-posts__author">Максим</p>
+                <p class="users-posts__time">(40 часов назад)</p>
+              </div>
+              <p class="users-posts__description">Где снег-то?</p>
+              <p class="users-posts__like">Нравится: 150</p>
             </div>
-            <p class="users-posts__description">Где снег-то?</p>
-            <p class="users-posts__like">Нравится: 150</p>
           </div>
         </li>
         <li class="users-posts__item">
@@ -204,12 +216,14 @@
             </a>
           </div>
           <div class="users-posts__article">
-            <div class="users-posts__head">
-              <p class="users-posts__author">Надежда</p>
-              <p class="users-posts__time">(45 часов назад)</p>
+            <div class="container--photo">
+              <div class="users-posts__head">
+                <p class="users-posts__author">Надежда</p>
+                <p class="users-posts__time">(45 часов назад)</p>
+              </div>
+              <p class="users-posts__description">Всем GM и взаимные лайки!</p>
+              <p class="users-posts__like">Нравится: 2560</p>
             </div>
-            <p class="users-posts__description">Всем GM и взаимные лайки!</p>
-            <p class="users-posts__like">Нравится: 2560</p>
           </div>
         </li>
       </ul>
@@ -328,7 +342,7 @@
         </p>
       </div>
     </footer>
-  </div>
+    </div>
 </body>
 
 </html>
