--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" href="css/style.css">
+  <script>
+    document.createElement("picture");
+  </script>
+  <script src="js/picturefill.js" async></script>
 </head>
 
 <body>
@@ -77,9 +81,9 @@
           <div class="hero__background">
             <div class="hero__image">
               <picture>
-                <source media="(min-width:660px)" srcset="img/iphone-hand-tablet@1x.png">
-                <source media="(min-width:1200px)" srcset="img/iphone-hand-desktop@1x.png">
-                <img class="hero__picture" src="img/iphone-hand-mobile@1x.png" width="258" height="286" alt="Рука держит смартфон с открытым приложением">
+                <source media="(min-width:660px)" srcset="img/iphone-hand-tablet@1x.png 1x, img/iphone-hand-tablet@2x.png 2x">
+                <source media="(min-width:1200px)" srcset="img/iphone-hand-desktop@1x.png 1x, img/iphone-hand-desktop@2x.png 2x">
+                <img class="hero__picture" src="img/iphone-hand-mobile@1x.png" srcset="img/iphone-hand-mobile@2x.png 2x" width="258" height="286" alt="Рука держит смартфон с открытым приложением">
               </picture>
             </div>
           </div>
@@ -121,8 +125,8 @@
               <li class="features__item">
                 <div class="features__pic">
                   <picture>
-                    <source media="(min-width:1200px)" srcset="img/iphone-screen-1-desktop@1x.png">
-                    <img class="features__image" src="img/iphone-screen-1-tablet@1x.png" width="150" height="100" alt="Cмартфон с черно-белым изображением">
+                    <source media="(min-width:1200px)" srcset="img/iphone-screen-1-desktop@1x.png 1x, img/iphone-screen-1-desktop@2x.png 2x">
+                    <img class="features__image" src="img/iphone-screen-1-tablet@1x.png" srcset="img/iphone-screen-1-tablet@2x.png 2x" width="150" height="100" alt="Cмартфон с черно-белым изображением">
                   </picture>
                 </div>
                 <h3 class="features__title">Поднимает настроение</h3>
@@ -131,8 +135,8 @@
               <li class="features__item">
                 <div class="features__pic">
                   <picture>
-                    <source media="(min-width:1200px)" srcset="img/iphone-screen-2-desktop@1x.png">
-                    <img class="features__image features__image--mobile" src="img/iphone-screen-2-tablet@1x.png" width="150" height="100" alt="Cмартфон с розовым изображением">
+                    <source media="(min-width:1200px)" srcset="img/iphone-screen-2-desktop@1x.png 1x, img/iphone-screen-2-desktop@2x.png 2x">
+                    <img class="features__image features__image--mobile" src="img/iphone-screen-2-tablet@1x.png" srcset="img/iphone-screen-2-tablet@2x.png 2x" width="150" height="100" alt="Cмартфон с розовым изображением">
                   </picture>
                 </div>
                 <h3 class="features__title">Меняет мир вокруг</h3>
@@ -141,9 +145,9 @@
               <li class="features__item">
                 <div class="features__pic features__pic--mobile">
                   <picture>
-                    <source media="(min-width:1200px)" srcset="img/iphone-screen-3-desktop@1x.png">
-                    <source media="(min-width:660px)" srcset="img/iphone-screen-3-tablet@1x.png">
-                    <img class="features__image" src="img/iphone-screen-mobile@1x.png" width="157" height="330" alt="Cмартфон со смайликом и надписью всем привет">
+                    <source media="(min-width:1200px)" srcset="img/iphone-screen-3-desktop@1x.png 1x, img/iphone-screen-3-desktop@2x.png 2x">
+                    <source media="(min-width:660px)" srcset="img/iphone-screen-3-tablet@1x.png 1x, img/iphone-screen-3-tablet@2x.png 2x">
+                    <img class="features__image" src="img/iphone-screen-mobile@1x.png" srcset="img/iphone-screen-mobile@2x.png 2x" width="157" height="330" alt="Cмартфон со смайликом и надписью всем привет">
                   </picture>
                 </div>
                 <h3 class="features__title">Заводит новых друзей</h3>
