--- a/source/photo.html
+++ b/source/photo.html
@@ -94,12 +94,14 @@
             </a>
           </div>
           <div class="users-posts__article users-posts__article--pano">
-            <div class="users-posts__head">
-              <p class="users-posts__author">Анна</p>
-              <p class="users-posts__time">(5 минут назад)</p>
+            <div class="container container--pano">
+              <div class="users-posts__head">
+                <p class="users-posts__author">Анна</p>
+                <p class="users-posts__time">(5 минут назад)</p>
+              </div>
+              <p class="users-posts__description users-posts__description--pano">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+              <p class="users-posts__like users-posts__like--pano">Нравится: 215</p>
             </div>
-            <p class="users-posts__description users-posts__description--pano">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
-            <p class="users-posts__like users-posts__like--pano">Нравится: 215</p>
           </div>
         </li>
         <li class="users-posts__item">
@@ -113,12 +115,14 @@
             </a>
           </div>
           <div class="users-posts__article">
-            <div class="users-posts__head">
-              <p class="users-posts__author">Левон</p>
-              <p class="users-posts__time">(5 часов назад)</p>
+            <div class="container container--photo">
+              <div class="users-posts__head">
+                <p class="users-posts__author">Левон</p>
+                <p class="users-posts__time">(5 часов назад)</p>
+              </div>
+              <p class="users-posts__description">Вчера он на луну летал, сегодня в руки к нам попал.</p>
+              <p class="users-posts__like">Нравится: 356</p>
             </div>
-            <p class="users-posts__description">Вчера он на луну летал, сегодня в руки к нам попал.</p>
-            <p class="users-posts__like">Нравится: 356</p>
           </div>
         </li>
         <li class="users-posts__item">
@@ -132,12 +136,14 @@
             </a>
           </div>
           <div class="users-posts__article">
-            <div class="users-posts__head">
-              <p class="users-posts__author">Антон</p>
-              <p class="users-posts__time">(12 часов назад)</p>
+            <div class="container container--photo">
+              <div class="users-posts__head">
+                <p class="users-posts__author">Антон</p>
+                <p class="users-posts__time">(12 часов назад)</p>
+              </div>
+              <p class="users-posts__description">Соседи будут рады!</p>
+              <p class="users-posts__like">Нравится: 666</p>
             </div>
-            <p class="users-posts__description">Соседи будут рады!</p>
-            <p class="users-posts__like">Нравится: 666</p>
           </div>
         </li>
         <li class="users-posts__item">
@@ -151,12 +157,14 @@
             </a>
           </div>
           <div class="users-posts__article">
-            <div class="users-posts__head">
-              <p class="users-posts__author">Борис</p>
-              <p class="users-posts__time">(20 часов назад)</p>
+            <div class="container container--photo">
+              <div class="users-posts__head">
+                <p class="users-posts__author">Борис</p>
+                <p class="users-posts__time">(20 часов назад)</p>
+              </div>
+              <p class="users-posts__description">Здесь могла быть ваша цитата о высоком и вечном.</p>
+              <p class="users-posts__like">Нравится: 215</p>
             </div>
-            <p class="users-posts__description">Здесь могла быть ваша цитата о высоком и вечном.</p>
-            <p class="users-posts__like">Нравится: 215</p>
           </div>
         </li>
         <li class="users-posts__item">
@@ -170,12 +178,14 @@
             </a>
           </div>
           <div class="users-posts__article">
-            <div class="users-posts__head">
-              <p class="users-posts__author">Сергей</p>
-              <p class="users-posts__time">(25 часов назад)</p>
+            <div class="container container--photo">
+              <div class="users-posts__head">
+                <p class="users-posts__author">Сергей</p>
+                <p class="users-posts__time">(25 часов назад)</p>
+              </div>
+              <p class="users-posts__description">Самая кубанская в мире!</p>
+              <p class="users-posts__like">Нравится: 4</p>
             </div>
-            <p class="users-posts__description">Самая кубанская в мире!</p>
-            <p class="users-posts__like">Нравится: 4</p>
           </div>
         </li>
         <li class="users-posts__item">
@@ -189,12 +199,14 @@
             </a>
           </div>
           <div class="users-posts__article">
-            <div class="users-posts__head">
-              <p class="users-posts__author">Максим</p>
-              <p class="users-posts__time">(40 часов назад)</p>
+            <div class="container container--photo">
+              <div class="users-posts__head">
+                <p class="users-posts__author">Максим</p>
+                <p class="users-posts__time">(40 часов назад)</p>
+              </div>
+              <p class="users-posts__description">Где снег-то?</p>
+              <p class="users-posts__like">Нравится: 150</p>
             </div>
-            <p class="users-posts__description">Где снег-то?</p>
-            <p class="users-posts__like">Нравится: 150</p>
           </div>
         </li>
         <li class="users-posts__item">
@@ -208,12 +220,14 @@
             </a>
           </div>
           <div class="users-posts__article">
-            <div class="users-posts__head">
-              <p class="users-posts__author">Надежда</p>
-              <p class="users-posts__time">(45 часов назад)</p>
+            <div class="container container--photo">
+              <div class="users-posts__head">
+                <p class="users-posts__author">Надежда</p>
+                <p class="users-posts__time">(45 часов назад)</p>
+              </div>
+              <p class="users-posts__description">Всем GM и взаимные лайки!</p>
+              <p class="users-posts__like">Нравится: 2560</p>
             </div>
-            <p class="users-posts__description">Всем GM и взаимные лайки!</p>
-            <p class="users-posts__like">Нравится: 2560</p>
           </div>
         </li>
       </ul>
